35/50 - testowanie z inputem